# scifly

./: .gitignore  DATABASE_API_CHANGES.md  DEPLOYMENT_GUIDE.md  GROQ_SETUP.md  MIGRATION_TROUBLESHOOTING.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  README.md  REDUX_INTEGRATION.md  REDUX_INTEGRATION_EXAMPLE.md  SEED_DATA_INSTRUCTIONS.md  SETUP_TEST.md  SUPABASE_INTEGRATION_EXAMPLE.ts  SUPABASE_SETUP.md  database_schema.sql  next.config.js  package-lock.json  package.json  supabase_schema.sql  supabase_seed_data.sql  tailwind.config.js  test-api.js  test-seed-data.js  test-supabase.js  tsconfig.json
agent/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  env.local.yaml.save  env.local.yaml.template  env.yaml.template  langgraph.json  load_env.py  main.py  pyproject.toml  requirements.txt
agent/cloud-run/: deploy.sh
agent/sample_agent/: agent.py  demo.py
cloud-run/: deploy.sh
migrations/: 001_add_generative_ui_support.sql  001_add_generative_ui_support_safe.sql  001_minimal_migration.sql
public/: index.html
src/: App.tsx  index.css  store.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AchievementBadge.tsx  AdaptiveLessonContainer.tsx  AuthDialog.tsx  AvatarIcon.tsx  DynamicBackground.tsx  Phase2Demo.tsx  Phase3Demo.tsx  PrimaryButton.tsx  ProgressBar.tsx  QuizCard.tsx  SimbaMascot.tsx  SpaceDecorations.tsx  TopicSelectionDialog.tsx  UserMenu.tsx  UserOnboardingDialog.tsx
src/config/: learningModes.ts  supabase.ts
src/data/: topics.ts
src/hooks/: useClarity.ts
src/pages/: AchievementsScreen.tsx  (+12 more)
(+70 files in other folders)
